--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -6,5 +6,11 @@ html
     = stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true
     = javascript_include_tag "application", "data-turbolinks-track" => true
     = csrf_meta_tags
-  body
-    = yield
+  body class=([controller_name, action_name])
+    #main role="main"
+      .container
+        .content
+          .row
+            .span12
+              = render 'layouts/messages'
+              = yield
