--- a/app/views/admin/show.html.slim
+++ b/app/views/admin/show.html.slim
@@ -1,9 +1,12 @@
 h1 Admin#show
 p Find me in app/views/admin/show.html.slim
 
--if user_signed_in?
+- if user_signed_in?
   li
     = link_to('Logout', destroy_user_session_path, method: :delete)
--else
+- else
   li
     = link_to('Login', new_user_session_path)
+
+
+= link_to 'Данные об отеле', admin_hotel_data_path
