--- a/app/views/room_categories/show.html.slim
+++ b/app/views/room_categories/show.html.slim
@@ -10,3 +10,5 @@ p
 = link_to 'Edit', edit_room_category_path(@room_category)
 '|
 = link_to 'Back', room_categories_path
+
+p = link_to 'Добавить номер', new_room_category_room_path(@room_category)
