--- a/app/views/reservations/_form.html.slim
+++ b/app/views/reservations/_form.html.slim
@@ -2,9 +2,9 @@
   = f.error_notification
 
   .form-inputs
-    = f.input :arrival
-    = f.input :departure
+    = f.input :arrival, as: :string, input_html: { class: 'datepicker' }
+    = f.input :departure, as: :string, input_html: { class: 'datepicker' }
     = f.input :room_category_id, as: :hidden
 
   .form-actions
-    = f.button :submit
+    = f.button :submit, 'Отправить'
