Validate that departure is later then arrival

--- a/app/views/reservations/show.html.slim
+++ b/app/views/reservations/show.html.slim
@@ -1,10 +1,10 @@
 p
-  strong Комната:
+  strong> Комната:
   = @reservation.room.number
 p
-  strong Дата заезда:
+  strong> Дата заезда:
   = @reservation.arrival
 p
-  strong Дата выезда:
+  strong> Дата выезда:
   = @reservation.departure
 
