Update admin interface

--- a/app/views/admin/home/hotel_data.html.slim
+++ b/app/views/admin/home/hotel_data.html.slim
@@ -1,4 +1,4 @@
 h1 Admin#hotel_data
 p Find me in app/views/admin/show.html.slim
 
-= link_to 'Номера', admin_room_categories_path
+/= link_to 'Номера', admin_room_categories_path
