--- a/app/views/admin/rooms/_form.html.slim
+++ b/app/views/admin/rooms/_form.html.slim
@@ -2,7 +2,8 @@
   = f.error_notification
 
   .form-inputs
-    = f.input :number
+    = f.input :number, as: :string
+    /= f.input :number
     = f.association :category
 
   .form-actions
