--- a/app/views/layouts/admin/admin.html.slim
+++ b/app/views/layouts/admin/admin.html.slim
@@ -7,22 +7,22 @@ html
     = javascript_include_tag "application", "data-turbolinks-track" => true
     = csrf_meta_tags
   body class=([controller_name, action_name])
-    .navbar
+    .navbar.navbar-fixed-top
       .navbar-inner
-        = link_to 'RubyHotel', admin_root_path, class: 'brand'
-        ul.nav
-          -if can?(:manage, :hotel_data)
-            li.dropdown
-              = link_to admin_hotel_data_path, class: 'dropdown-toggle', data: {toggle: "dropdown", target: "#"} do
-                | Данные об отеле
-                b.caret
-              ul.dropdown-menu
-                li = link_to 'Номера', admin_room_categories_path
-          li = link_to 'Брони', admin_reservations_path
-        ul.nav.pull-right
-          li = link_to('Выход', destroy_user_session_path, method: :delete)
+        .container
+          = link_to 'RubyHotel', admin_root_path, class: 'brand'
+          ul.nav
+            -if can?(:manage, :hotel_data)
+              li.dropdown
+                = link_to admin_hotel_data_path, class: 'dropdown-toggle', data: {toggle: "dropdown", target: "#"} do
+                  | Данные об отеле
+                  b.caret
+                ul.dropdown-menu
+                  li = link_to 'Номера', admin_room_categories_path
+            li = link_to 'Брони', admin_reservations_path
+          ul.nav.pull-right
+            li = link_to('Выход', destroy_user_session_path, method: :delete)
     .container
-      .row
-        .span12
-          = render 'layouts/messages'
-          = yield
+      = render 'layouts/messages'
+      #content
+        = yield
