--- a/app/views/layouts/admin/admin.html.slim
+++ b/app/views/layouts/admin/admin.html.slim
@@ -14,7 +14,7 @@ html
           ul.nav
             -if can?(:manage, :hotel_data)
               li.dropdown
-                = link_to admin_hotel_data_path, class: 'dropdown-toggle', data: {toggle: "dropdown", target: "#"} do
+                = link_to '#', class: 'dropdown-toggle', data: {toggle: "dropdown"} do
                   | Данные об отеле
                   b.caret
                 ul.dropdown-menu
