--- a/app/views/admin/reservations/edit.html.slim
+++ b/app/views/admin/reservations/edit.html.slim
@@ -2,7 +2,7 @@ h1 Editing reservation
 
 == render 'form'
 
-= link_to 'Show', @reservation
+= link_to 'Show', [:admin, @reservation]
 '|
-= link_to 'Back', reservations_path
+= link_to 'Back', admin_reservations_path
 
