--- a/app/views/layouts/admin/admin.html.slim
+++ b/app/views/layouts/admin/admin.html.slim
@@ -4,7 +4,7 @@ html
     title
       | RubyHotel
     = stylesheet_link_tag    'admin', media: 'all', 'data-turbolinks-track' => true
-    = javascript_include_tag 'application', 'data-turbolinks-track' => true
+    = javascript_include_tag 'admin', 'data-turbolinks-track' => true
     = csrf_meta_tags
   body class=([controller_name, action_name])
     .navbar.navbar-fixed-top
