Update employees interface

--- a/app/views/admin/reservations/index.html.slim
+++ b/app/views/admin/reservations/index.html.slim
@@ -3,8 +3,8 @@ h1 Брони
 -if @reservations.any?
   table.table.table-hover
     tr
-      th Номер брони
-      th Комната
+      th Код брони
+      th Номер
       th Дата заезда
       th Дата выезда
     - @reservations.each do |reservation|
