--- a/app/views/admin/reservations/show.html.slim
+++ b/app/views/admin/reservations/show.html.slim
@@ -9,5 +9,5 @@ p
   = @reservation.departure
 
 =button_group
-  = bs_button_to 'Аннулировать', cancel_admin_reservation_path, method: :patch
-  = bs_button_to 'Изменить', edit_admin_reservation_path(@reservation)
+  = bs_button_to 'Изменить', edit_admin_reservation_path(@reservation), class: 'btn-primary'
+  = bs_button_to 'Аннулировать', cancel_admin_reservation_path, data: { confirm: 'Вы действительно хотите аннулировать эту бронь?' }, method: :patch
