--- a/app/views/admin/room_categories/show.html.slim
+++ b/app/views/admin/room_categories/show.html.slim
@@ -1,4 +1,4 @@
-= render partial: 'room_categories/room_category', locals: { room_category: @room_category, }
+= render 'room_categories/room_category', room_category: @room_category
 
 .row
   .span6
