--- a/app/views/admin/accommodations/show.html.slim
+++ b/app/views/admin/accommodations/show.html.slim
@@ -1,6 +1,6 @@
 p#notice = notice
 
 
-= link_to 'Edit', edit_accommodation_path(@accommodation)
+= link_to 'Edit', edit_admin_accommodation_path(@accommodation)
 '|
-= link_to 'Back', accommodations_path
+= link_to 'Back', admin_accommodations_path
