--- a/app/views/layouts/admin/admin.html.slim
+++ b/app/views/layouts/admin/admin.html.slim
@@ -20,6 +20,7 @@ html
                 ul.dropdown-menu
                   li = link_to 'Номера', admin_room_categories_path
             li = link_to 'Брони', admin_reservations_path
+            li = link_to 'Проживающие клиенты', admin_accommodations_path
           ul.nav.pull-right
             li = link_to('Выход', destroy_user_session_path, method: :delete)
     .container
