--- a/app/views/reservations/_form.html.slim
+++ b/app/views/reservations/_form.html.slim
@@ -8,5 +8,15 @@
     = f.input :departure, as: :string, input_html: { class: 'datepicker' }
     = f.input :room_category_id, as: :hidden
 
+    = f.simple_fields_for(:client) do |cf|
+      = cf.input :last_name
+      = cf.input :first_name
+      = cf.input :middle_name
+      = cf.simple_fields_for (:contact_information) do |cif|
+        = cif.simple_fields_for (:phones) do |pf|
+          = pf.input :number
+        = cif.simple_fields_for (:emails) do |ef|
+          = ef.input :address, required: false
+
   .form-actions
     = f.button :submit, 'Отправить'
