Accommodation create placement from params

--- a/app/views/admin/accommodations/index.html.slim
+++ b/app/views/admin/accommodations/index.html.slim
@@ -20,4 +20,4 @@ table.table
 
 br
 
-= link_to 'New Accommodation', new_admin_accommodation_path
+= link_to 'Новое заселение', new_admin_accommodation_path, class: :btn
