--- a/app/views/admin/accommodations/_form.html.slim
+++ b/app/views/admin/accommodations/_form.html.slim
@@ -2,6 +2,20 @@
   = f.error_notification
 
   .form-inputs
+    = f.input :room_category_id, as: :hidden
+    = f.simple_fields_for(:placements) do |pf|
+      = pf.input :arrival, as: :string, input_html: { class: 'datepicker' }
+      = pf.input :departure, as: :string, input_html: { class: 'datepicker' }
+
+    = f.simple_fields_for(:client) do |cf|
+      = cf.input :last_name
+      = cf.input :first_name
+      = cf.input :middle_name
+      = cf.simple_fields_for (:contact_information) do |cif|
+        = cif.simple_fields_for (:phones) do |pf|
+          = pf.input :number
+        = cif.simple_fields_for (:emails) do |ef|
+          = ef.input :address, required: false
 
   .form-actions
     = f.button :submit
