--- a/app/views/admin/clients/show.html.slim
+++ b/app/views/admin/clients/show.html.slim
@@ -10,8 +10,8 @@ p
   strong Last name:
   = @client.last_name
 p
-  strong Birsday:
-  = @client.birsday
+  strong Birthday:
+  = @client.birthday
 
 = link_to 'Edit', edit_client_path(@client)
 '|
