--- a/app/views/admin/clients/_form.html.slim
+++ b/app/views/admin/clients/_form.html.slim
@@ -5,7 +5,7 @@
     = f.input :first_name
     = f.input :middle_name
     = f.input :last_name
-    = f.input :birsday
+    = f.input :birthday
 
   .form-actions
     = f.button :submit
