--- a/app/assets/stylesheets/admin/row_link.css.sass
+++ b/app/assets/stylesheets/admin/row_link.css.sass
@@ -2,3 +2,7 @@ tr.row-link
   cursor: pointer
   &:hover
     background: #f3f3f3
+  a
+    color: inherit
+    &:hover
+      text-decoration: inherit
