--- a/app/views/admin/room_categories/edit.html.slim
+++ b/app/views/admin/room_categories/edit.html.slim
@@ -1,8 +1,3 @@
-h1 Editing room_category
+h1 Изменение категории
 
 == render 'form'
-
-= link_to 'Show', [:admin, @room_category]
-'|
-= link_to 'Back', admin_room_categories_path
-
