--- a/app/views/admin/reservations/index.html.slim
+++ b/app/views/admin/reservations/index.html.slim
@@ -22,4 +22,4 @@ h1 Брони
 
 br
 
-= link_to 'New Reservation', new_admin_reservation_path
+= link_to 'Новая бронь', new_admin_reservation_path, class: :btn
