--- a/app/views/admin/reservations/show.html.slim
+++ b/app/views/admin/reservations/show.html.slim
@@ -14,4 +14,4 @@ p
   .span6
     = link_to 'Аннулировать', cancel_admin_reservation_path, class: :btn, data: { confirm: 'Вы действительно хотите аннулировать эту бронь?',  'confirm-proceed-class' => 'btn-danger' }, method: :patch
     = link_to 'Изменить', edit_admin_reservation_path(@reservation), class: :btn
-    = button_to 'Заселить', admin_accommodations_path(accommodation: {reservation_id: @reservation.id}), class: :btn, data: { confirm: 'Выполнить заселение?' }
+    = link_to 'Заселить', new_admin_accommodation_path(reservation_id: @reservation.id), class: :btn
