--- a/app/views/layouts/admin/admin.html.slim
+++ b/app/views/layouts/admin/admin.html.slim
@@ -5,6 +5,7 @@ html
       | RubyHotel
     = stylesheet_link_tag    'admin', media: 'all', 'data-turbolinks-track' => true
     = javascript_include_tag 'admin', 'data-turbolinks-track' => true
+    = favicon_link_tag 'hotel-icon.png'
     = csrf_meta_tags
   body class=([controller_name, action_name])
     .navbar.navbar-fixed-top
