--- a/app/views/reservations/show.html.slim
+++ b/app/views/reservations/show.html.slim
@@ -1,10 +1,2 @@
-p
-  strong> Комната:
-  = @reservation.room.number
-p
-  strong> Дата заезда:
-  = @reservation.arrival
-p
-  strong> Дата выезда:
-  = @reservation.departure
-
+h3 Данные брони
+= render @reservation
