--- a/app/views/admin/reservations/index.html.slim
+++ b/app/views/admin/reservations/index.html.slim
@@ -19,6 +19,8 @@ h1 Брони
         td = reservation.room.number
         td = reservation.arrival
         td = reservation.departure
+- else
+  p Список активных броней пуст
 
 br
 
