Localize dates format

--- a/app/views/admin/accommodations/index.html.slim
+++ b/app/views/admin/accommodations/index.html.slim
@@ -15,8 +15,8 @@ h1 Проживающие клиенты
         td = accommodation.client.first_name
         td = accommodation.client.middle_name
         td = accommodation.room.number
-        td = accommodation.arrival
-        td = accommodation.departure
+        td = l accommodation.arrival
+        td = l accommodation.departure
 - else
   p Список проживающих клиентов пуст
 
