--- a/app/views/admin/reservations/index.html.slim
+++ b/app/views/admin/reservations/index.html.slim
@@ -17,8 +17,8 @@ h1 Брони
         td = reservation.client.first_name
         td = reservation.client.middle_name
         td = reservation.room.number
-        td = reservation.arrival
-        td = reservation.departure
+        td = l reservation.arrival
+        td = l reservation.departure
 - else
   p Список активных броней пуст
 
