--- a/app/views/admin/accommodations/show.html.slim
+++ b/app/views/admin/accommodations/show.html.slim
@@ -5,10 +5,10 @@ p
   = "№#{@accommodation.room.number}"
 p
   strong> Дата заезда:
-  = @accommodation.arrival
+  = l @accommodation.arrival, format: :long
 p
   strong> Дата выезда:
-  = @accommodation.departure
+  = l @accommodation.departure, format: :long
 
 h3 Данные о клиенте
 = render 'clients/client', client: @accommodation.client
