--- a/app/views/reservations/_reservation.html.slim
+++ b/app/views/reservations/_reservation.html.slim
@@ -7,10 +7,10 @@
     = "№#{reservation.room.number}"
   p
     strong> Дата заезда:
-    = reservation.arrival
+    = l reservation.arrival, format: :long
   p
     strong> Дата выезда:
-    = reservation.departure
+    = l reservation.departure, format: :long
 
   h3 Данные о клиенте
   = render 'clients/client', client: reservation.client
