--- a/app/views/admin/accommodations/show.html.slim
+++ b/app/views/admin/accommodations/show.html.slim
@@ -16,3 +16,5 @@ h3 Данные о клиенте
 .row
   .span6
     = link_to 'Назад', admin_accommodations_path, class: :btn
+  .span6
+    = link_to 'Выселить', finish_admin_accommodation_path, class: :btn, data: { confirm: 'Вы действительно хотите выполнить выселение?',  'confirm-proceed-class' => 'btn-danger' }, method: :patch
