--- a/app/views/admin/reservations/_form.html.slim
+++ b/app/views/admin/reservations/_form.html.slim
@@ -1,10 +1,11 @@
-= simple_form_for(@reservation) do |f|
-  = f.error_notification
+= simple_form_for([:admin, @reservation]) do |f|
+  - @reservation.errors[:base].each do |error|
+    .alert.alert-error = error
 
-  .form-inputs
-    = f.input :arrival, as: :string, input_html: { class: 'datepicker' }
-    = f.input :departure, as: :string, input_html: { class: 'datepicker' }
-    = f.input :room_category_id, as: :hidden
+  = render 'reservations/form_fields', form: f
 
-  .form-actions
-    = f.button :submit, 'Отправить'
+  .row
+    .span2
+      = link_to 'Назад', collection_path, class: :btn
+    .span1
+      = f.button :submit, 'Сохранить'
