--- a/app/views/admin/reservations/show.html.slim
+++ b/app/views/admin/reservations/show.html.slim
@@ -7,5 +7,5 @@ br
     = link_to 'Назад', admin_reservations_path, class: :btn
   .span6
     = link_to 'Аннулировать', cancel_admin_reservation_path, class: :btn, data: { confirm: 'Вы действительно хотите аннулировать эту бронь?',  'confirm-proceed-class' => 'btn-danger' }, method: :patch
-    /= link_to 'Изменить', edit_admin_reservation_path(@reservation), class: :btn
-    = link_to 'Заселить', new_admin_accommodation_path(reservation_id: @reservation.id), class: :btn
+    - if @reservation.can_create_accomodation?
+      = link_to 'Заселить', new_admin_accommodation_path(reservation_id: @reservation.id), class: :btn
