Extract ArrivalDDepartureDatepicker as global class

--- a/app/views/reservations/_form_fields.html.slim
+++ b/app/views/reservations/_form_fields.html.slim
@@ -3,11 +3,11 @@
 
   = form.label :arrival
   = form.input :arrival, as: :hidden
-  .datepicker.arrival
+  .datepicker.reservation_arrival
 
   = form.label :departure
   = form.input :departure, as: :hidden
-  .datepicker.departure
+  .datepicker.reservation_departure
 
   = form.simple_fields_for(:client) do |cf|
     = cf.input :last_name
